--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>personal website</title>
 
     <link rel="stylesheet" href="css/narmaliz.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -680,10 +680,10 @@ Chocolate brownie
     </a>
 
     <!--Start of Tawk.to Script-->
-    <script src="/js/chat.js"></script>
+    <script src="js/main.js"></script>
     <!--End of Tawk.to Script-->
 
-    <script src="/js/script.js"></script>
+    <script src="js/main.js"></script>
 
 
 
